--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="container">
             <div class="row gap">
               <div class="nav-img">
-                <img src="/image 2.png" alt="Samsung" />
+                <img src="./image 2.png" alt="Samsung" />
               </div>
               <ul class="nav-list">
                 <li><a href="#">SAMSUNG.COM</a></li>
@@ -22,7 +22,7 @@
                 <li><a href="#">SAMSUNG NEWSROOM</a></li>
                 <li><a href="#">SAMSUNG DEVELOPERS</a></li>
                 <li><a href="#">DESIGN SAMSUNG</a></li>
-                <img src="/image 3.png" alt="three row" />
+                <img src="./image 3.png" alt="three row" />
               </ul>
             </div>
           </div>
@@ -43,14 +43,14 @@
         <div class="container">
           <div class="row">
             <div class="col-2 another">
-                    <img src="/image 5.png" alt="Holding zflip" />
+                    <img src="./image 5.png" alt="Holding zflip" />
                 <p class="secondp">
                   Galaxy Z Fold4: <br />
                   Official Launch Film
                 </p>
             </div>
             <div class="col-2 another">
-                <img src="/image 6.png" alt="Zflip pic" />
+                <img src="./image 6.png" alt="Zflip pic" />
                 <p class="thirdp">
                   Samsung unpacked <br />
                   Official highlights
@@ -64,11 +64,11 @@
             <div class="row">
                 <div class="col-4 hello">
                     <div class="another">
-                        <img src="/image 7.png" alt="image-7">
+                        <img src="./image 7.png" alt="image-7">
                         <p class="fourthp">Galaxy Z Flip4</p>
                     </div>
                     <div class="another">
-                            <img src="/image 8.png" alt="image-8">
+                            <img src="./image 8.png" alt="image-8">
                             <p class="fourthp">Galaxy Z Flip4</p>
                         </div>
                         <div class="another">
@@ -76,7 +76,7 @@
                             <p class="fourthp">Galaxy S22 Ultra</p>
                         </div>
                         <div class="another">
-                            <img src="/image 7 (2).png" alt="img7.2">
+                            <img src="image 7 (2).png" alt="img7.2">
                             <p class="fourthp">Galaxy S22 | 22+</p>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-4 hello">
                     <div class="another">
-                        <img src="/image 7 (3).png" alt="image-7">
+                        <img src="image 7 (3).png" alt="image-7">
                         <p class="fourthp">Galaxy Tab S8  <br>| S8+ | S8 Ultra</p>
                     </div>
                     
