--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 
                 
                 <div class="vectors">
-                    <img src="/Share.png" alt="Share">
-                    <img src="/Vector.png" alt="facebook">
-                    <img src="/Vector (1).png" alt="twitter">
-                    <img src="/Vector (2).png" alt="linkedin">
+                    <img src="Share.png" alt="Share">
+                    <img src="Vector.png" alt="facebook">
+                    <img src="Vector (1).png" alt="twitter">
+                    <img src="Vector (2).png" alt="linkedin">
                 </div>
                 
             </div>
             <div class="row">
                 <div class="img7-6">
-                    <img src="/image 7 (6).png" alt="Samsung">
+                    <img src="image 7 (6).png" alt="Samsung">
                 </div>
                 <div>
                     <p>
